--- a/main.html
+++ b/main.html
@@ -10,12 +10,15 @@
 </head>
 <body>
 <div class="main">
+<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 	<div class="ryu-container">
 		<div class="ryu-still"></div>
 		<div class="ryu-ready"></div>
 		<div class="ryu-throwing"></div>
+		<div class="ryu-cool"></div>
 	</div>
 	<div class="hadouken"></div>
+	<div class="instructions">Click on Ryu to throw Hadouken,</br>Hold x to trigger cool pose</div>
 </div>
 </body>
 </html>
